--- a/src/main/webapp/WEB-INF/templates/base.html.vm
+++ b/src/main/webapp/WEB-INF/templates/base.html.vm
@@ -109,7 +109,7 @@
 	                <table dir="ltr" style="padding:14px 10px 0 10px">
 	                    <tbody>
 	                        <tr>
-	                            <td style="width:100%;font-size:11px;font-family:Open Sans,Arial;color:#646464;line-height:20px;min-height:40px;vertical-align:middle">$footer</td>
+	                            <td style="width:100%;font-size:11px;font-family:Open Sans,Arial;color:#646464;line-height:20px;min-height:40px;vertical-align:middle">TeamPot, easy team task management.</td>
 	
 	                            <td style="padding-left:20px;vertical-align:middle">
 	                                <a href="$appUrl" target="_blank"><h4>TeamPot</h4></a>
