--- a/src/main/webapp/components/NotifyService/error-toast.html
+++ b/src/main/webapp/components/NotifyService/error-toast.html
@@ -1,5 +1,5 @@
-<material-toast>
+<md-toast>
 	<span flex>{{message}}</span>
 	&nbsp;&nbsp;
-	<material-button ng-if="hasRetry" ng-click="retry()" class="text-error">Retry</material-button>
-</material-toast>
+	<md-button ng-if="hasRetry" ng-click="retry()" class="text-error">Retry</md-button>
+</md-toast>
