--- a/src/main/webapp/components/NotifyService/info-toast.html
+++ b/src/main/webapp/components/NotifyService/info-toast.html
@@ -1,5 +1,5 @@
-<material-toast>
+<md-toast>
 	<span flex>{{message}}</span>
 	&nbsp;&nbsp;
-	<material-button ng-if="hasUndo" ng-click="undo()" class="text-warning">Undo</material-button>
-</material-toast>
+	<md-button ng-if="hasUndo" ng-click="undo()" class="text-warning">Undo</md-button>
+</md-toast>
