--- a/src/main/webapp/components/activity/item-MemberActivityEvent.html
+++ b/src/main/webapp/components/activity/item-MemberActivityEvent.html
@@ -1,9 +1,9 @@
-<div flex layout="horizontal" layout-align="center center">
+<div flex layout="row" layout-align="center center">
 	<h3>
 		<img class="face" src="about:blank" ng-src="{{activity.user.iconUrl ? activity.user.iconUrl : '/img/face.png'}}"/>
 								
 	</h3>
-	<div layout="vertical" flex>
+	<div layout="column" flex>
 		<span>{{activity.user.firstName}} {{activity.user.lastName}}</span>
 		<span>{{activity.user.email}}</span>
 	</div>
