--- a/src/main/webapp/components/meeting/list-fab.html
+++ b/src/main/webapp/components/meeting/list-fab.html
@@ -1,6 +1,6 @@
 <span>
-	<material-button class="material-button-fab material-button-fab-bottom-right material-theme-red" ng-href="/#/project/{{routeParams.projectId}}/meeting">
-		<material-icon icon="/img/icons/ic_add_24px.svg"></material-icon>
-		<material-tooltip>Add new Meeting</material-tooltip>
-	</material-button>
+	<md-button class="md-fab md-fab-bottom-right" ng-href="/#/project/{{routeParams.projectId}}/meeting">
+		<md-icon icon="/img/icons/ic_add_24px.svg"></md-icon>
+		<md-tooltip>Add new Meeting</md-tooltip>
+	</md-button>
 </span>
