--- a/src/main/webapp/components/user/list-fab.html
+++ b/src/main/webapp/components/user/list-fab.html
@@ -1,6 +1,6 @@
 <span ng-controller='userListFabController'>
-	<material-button class="material-button-fab material-button-fab-bottom-right material-theme-red" ng-click="fabAdd($event)">
-		<material-icon icon="/img/icons/ic_add_24px.svg"></material-icon>
-		<material-tooltip>Add user</material-tooltip>
-	</material-button>
+	<md-button class="md-fab md-primary md-fab-bottom-right" ng-click="fabAdd($event)">
+		<md-icon icon="/img/icons/ic_add_24px.svg"></md-icon>
+		<md-tooltip>Add user</md-tooltip>
+	</md-button>
 </span>
