--- a/src/main/webapp/components/file/list.html
+++ b/src/main/webapp/components/file/list.html
@@ -7,7 +7,7 @@
 </div>
 
 <md-whiteframe class="fillview md-whiteframe-z1" layout layout-align="center center" ng-show="!filesLoading && iframeready && folderIsNotEmpty">
-	<md-content  class="material-content-padded" flex style="height:100%; overflow:hidden;">
+	<md-content  class="md-content-padded" flex style="height:100%; overflow:hidden;">
 		<iframe id="fileListIframe" ng-src="{{iframeSrc}}" style="width: 100%; height: 100%" frameborder="0" iframe-onload="iframeLoaded()"></iframe>
 	</md-content>
 </md-whiteframe>
