--- a/src/main/webapp/components/meeting/edit.html
+++ b/src/main/webapp/components/meeting/edit.html
@@ -3,7 +3,7 @@
 </div>
 
 <md-whiteframe class="md-whiteframe-z1" layout layout-align="center center" ng-if="meeting.$resolved">
-	<md-content class="material-content-padded" flex>
+	<md-content class="md-content-padded" flex>
 	
 		<form>
 	
