--- a/src/main/webapp/app.css
+++ b/src/main/webapp/app.css
@@ -1,6 +1,7 @@
 
 body, 
-html {
+html,
+#appview-container {
 	color: #444;
 	background: #ececec;
 }
@@ -64,7 +65,7 @@ html {
 	padding:25px;
 }
 
-material-whiteframe.fillview {
+md-whiteframe.fillview {
 	position: absolute;
     left: 16px;
     right: 16px;
@@ -94,21 +95,10 @@ material-whiteframe.fillview {
 	font-size:12px;
 }
 
-#appview material-circular-progress .inset,
-material-circular-progress.spinner-gray .inset {
+#appview md-progress-circular .md-inset,
+md-progress-circular.spinner-gray .md-inset {
 	background: #ececec;
 }
-
-.material-subheader {
-	background: #ececec;
-	padding-bottom:0;
-}
-.material-subheader.material-sticky-clone {
-	margin-left:0 !important;
-	padding-left:32px !important;
-	padding-bottom:10px;
-}
-
 
 
 .list-item-box {
