--- a/src/main/webapp/components/task/edit.html
+++ b/src/main/webapp/components/task/edit.html
@@ -3,7 +3,7 @@
 </div>
 
 <md-whiteframe class="md-whiteframe-z1" layout layout-align="center center" ng-if="task.$resolved">
-	<md-content class="material-content-padded" flex>
+	<md-content class="md-content-padded" flex>
 	
 		<form>
 	
@@ -12,10 +12,10 @@
 					<md-checkbox class="checkbox-bigger" ng-model="task.completed" aria-label="Completed"></md-checkbox>
 				</div>
 				<div flex>
-					<md-text-float label="Title" value="task.title" class="md-text-float-full-with input-lg"></md-text-float>
+					<md-text-float label="Title" ng-model="task.title" class="md-text-float-full-with input-lg"></md-text-float>
 				</div>
 				<div style="overflow:hidden;">
-					<md-input-group class="material-input-has-value">
+					<md-input-group class="md-input-has-value">
 						<label for="">Priority</label>
 						<md-slider md-discrete ng-model="task.priority" step="1" min="0" max="4" aria-label="Priority" style="width: 200px;"></md-slider>
 					</md-input-group>
@@ -24,25 +24,25 @@
 			
 			<div layout="row" layout-align="center center">
 				<div flex>
-					<md-text-float label="Labels" value="task.labels" class="md-text-float-full-with"></md-text-float>
+					<md-text-float label="Labels" ng-model="task.labels" class="md-text-float-full-with"></md-text-float>
 				</div>
 				<div>
-					<md-text-float label="Due date" value="task.dueDate" type="date"></md-text-float>
+					<md-text-float label="Due date" ng-model="task.dueDate" type="date"></md-text-float>
 				</div>
 				<div>
-					<md-text-float label="Assignee" value="task.assignee"></md-text-float>
+					<md-text-float label="Assignee" ng-model="task.assignee"></md-text-float>
 				</div>
 			</div>
 			
 			<div layout="row" layout-align="center center">
 				<div flex>
-					<md-text-float label="Description" value="task.description" type="textarea" class="md-text-float-full-with"></md-text-float>
+					<md-text-float label="Description" ng-model="task.description" type="textarea" class="md-text-float-full-with"></md-text-float>
 				</div>
 			</div>
 			
 			<div layout="row">
 				<div class="material-content-actions" flex>
-					<md-button class="material-button-raised" ng-href="#/project/{{currentProject.id}}/tasks">OK</md-button>
+					<md-button class="md-raised md-primary" ng-href="#/project/{{currentProject.id}}/tasks">OK</md-button>
 				</div>
 			</div>
       
